salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/Stick_Pack_Detail__c.object-meta.xml
<CustomObject>
    <description>Stick pack packaging costs and specifications</description>
    <label>Stick Pack Detail</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stick Pack Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>