salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Colors__c.field-meta.xml
<CustomField>
    <fullName>Colors__c</fullName><label>Colors</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>