salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Display_Board_Grade__c.field-meta.xml
<CustomField>
    <fullName>Display_Board_Grade__c</fullName><label>Display Board Grade</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>