salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Display_Cost__c.field-meta.xml
<CustomField>
    <fullName>Display_Cost__c</fullName><label>Display Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>