salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Display_Description__c.field-meta.xml
<CustomField>
    <fullName>Display_Description__c</fullName><label>Display Description</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>