salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Display_Product_Style__c.field-meta.xml
<CustomField>
    <fullName>Display_Product_Style__c</fullName><label>Display Product Style</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>