salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Other_Cost_Desc__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Desc__c</fullName><label>Other Cost Description</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>