salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Other_Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Value__c</fullName><label>Other Cost Value</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>