salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Packet_Contents__c.field-meta.xml
<CustomField>
    <fullName>Packet_Contents__c</fullName><label>Packet Contents</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>