salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Printing_Plates__c.field-meta.xml
<CustomField>
    <fullName>Printing_Plates__c</fullName><label>Printing Plates</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>