salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Research_Development_Box__c.field-meta.xml
<CustomField>
    <fullName>Research_Development_Box__c</fullName><label>R&D (Box)</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>