salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Shipper_Case_Cost_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Case_Cost_Bulk__c</fullName><label>Shipper Case Cost (Bulk)</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>