salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Shipper_Case_Count_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Case_Count_Bulk__c</fullName><label>Shipper Case Count (Bulk)</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>