salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Shipper_Case_Count_Value__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Case_Count_Value__c</fullName><label>Shipper Case Count</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>