salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Size_Count__c.field-meta.xml
<CustomField>
    <fullName>Size_Count__c</fullName><label>Size Count</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>