salesforce/force-app/main/default/objects/Stick_Pack_Detail__c/fields/Stick_Packs__c.field-meta.xml
<CustomField>
    <fullName>Stick_Packs__c</fullName><label>Stick Packs Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>